--- a/source/styles/app.scss
+++ b/source/styles/app.scss
@@ -1,12 +1,11 @@
-body{
-    color: red;
-}
-html{
-    width: 100%;
-    height: 100%;
-    color: blue;
-}
-h2{
-    color: red;
-    background: radial-gradient(45deg, red, blue);
-}
+
+//layout setups
+@import 'layout/setups';
+@import 'layout/fonts';
+
+//mixins
+@import 'helpers/mixins';
+
+//blocks
+@import 'blocks/**/*'
+
