--- a/source/template/mian-layout.pug
+++ b/source/template/mian-layout.pug
@@ -1,12 +1,14 @@
-doctype html
-html
-    head
-        meta(charset='utf-8')
-        title my page
-        meta(content="" name="author")
-        link(rel="stylesheet", href="/assets/styles/main.css")
-    
+include mixins/mixins
 
+
+<!DOCTYPE html>
+html(lang="en")
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        title
+            block title
     body
-        h1 my page
-        h2 hello
+        .wrapper
+            .block content
