--- a/source/styles/helpers/mixins.scss
+++ b/source/styles/helpers/mixins.scss
@@ -1,30 +1,12 @@
-@mixin inlineblock($valign : top){
-    display: inline-block;
-    vertical-align: $valing;
-}
-
-@mixin centered($axes : both){
-    position: absolute;
-    @if $axes == both {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%)
-    }
-    @if $axes == y {
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    @if $axes == x {
-        left: 50%;
-        transform: translateX(-50%);
+//phones
+@mixin phone{
+    @media screen and (max-width: 390px){
+        @content;
     }
 }
-
-
-%clearfix{
-    &:after{
-        content: "";
-        display: block;
-        clear: both;
+//phones
+@mixin minphone{
+    @media screen and (max-width: 360px){
+        @content;
     }
 }
