--- a/source/styles/layout/setups.scss
+++ b/source/styles/layout/setups.scss
@@ -2,19 +2,16 @@ html, body{
     height: 100%;
 }
 body{
-    @include roboto;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
-    line-height: 1.3;
-    color: #000000;
+    line-height: 1.42
 }
 
 .wrapper{
     position: relative;
     min-height: 100%;
     overflow: hidden;
-    max-width: 575px;
-    margin: 0 auto;
 }
 ul{
     padding: 0;
@@ -32,20 +29,4 @@ h1, h2, h3, h4, h5{
 
 *{
     box-sizing: border-box;
-}
-
-a{
-    text-decoration: none;
-}
-.container{
-    margin: 0 20px;
-}
-.mb-15{
-    margin-bottom: 15px;
-}
-.mb-20{
-    margin-bottom: 20px;
-}
-.mb-30{
-    margin-bottom: 30px;
 }
